; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/virtio/network/extr_if_vtnet.c_vtnet_rxq_discard_merged_bufs.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/virtio/network/extr_if_vtnet.c_vtnet_rxq_discard_merged_bufs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vtnet_rxq = type { i32 }
%struct.mbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vtnet_rxq*, i32)* @vtnet_rxq_discard_merged_bufs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vtnet_rxq_discard_merged_bufs(%struct.vtnet_rxq* %0, i32 %1) #0 {
  %3 = alloca %struct.vtnet_rxq*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mbuf*, align 8
  store %struct.vtnet_rxq* %0, %struct.vtnet_rxq** %3, align 8
  store i32 %1, i32* %4, align 4
  br label %6

6:                                                ; preds = %18, %2
  %7 = load i32, i32* %4, align 4
  %8 = add nsw i32 %7, -1
  store i32 %8, i32* %4, align 4
  %9 = icmp sgt i32 %8, 0
  br i1 %9, label %10, label %22

10:                                               ; preds = %6
  %11 = load %struct.vtnet_rxq*, %struct.vtnet_rxq** %3, align 8
  %12 = getelementptr inbounds %struct.vtnet_rxq, %struct.vtnet_rxq* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.mbuf* @virtqueue_dequeue(i32 %13, i32* null)
  store %struct.mbuf* %14, %struct.mbuf** %5, align 8
  %15 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %16 = icmp eq %struct.mbuf* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %10
  br label %22

18:                                               ; preds = %10
  %19 = load %struct.vtnet_rxq*, %struct.vtnet_rxq** %3, align 8
  %20 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %21 = call i32 @vtnet_rxq_discard_buf(%struct.vtnet_rxq* %19, %struct.mbuf* %20)
  br label %6

22:                                               ; preds = %17, %6
  ret void
}

declare dso_local %struct.mbuf* @virtqueue_dequeue(i32, i32*) #1

declare dso_local i32 @vtnet_rxq_discard_buf(%struct.vtnet_rxq*, %struct.mbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
